--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "prettier": "^2.8.1"
   }
 }
